Added: Validating Name And StartDate

--- a/css/employeepayroll.css
+++ b/css/employeepayroll.css
@@ -162,7 +162,7 @@
         }
         
         .cancelButton {
-            text-decoration: node;
+            text-decoration: none;
             text-align: center;
         }
         
