--- a/css/employeepayroll.css
+++ b/css/employeepayroll.css
@@ -5,6 +5,8 @@
         body {
             margin: 0;
             height: 100%;
+            border: 1px solid purple;
+            border-radius: 5px;
         }
         
         .header {
@@ -18,6 +20,7 @@
             justify-content: center;
             align-items: center;
             border: 1px solid green;
+            border-radius: 5px;
         }
         
         .logo-content {
@@ -59,7 +62,7 @@
             padding: 44px 60px;
             background: #ffffff 0% 0% no-repeat padding-box;
             box-shadow: 0px 3px 6px #00000029;
-            border: 1px solid #f5f5f5;
+            border: 1px solid #f8f3e9;
             border-radius: 8px;
             opacity: 1;
         }
